<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ADS_CLEAN_AXIS" Id="{583ff9fb-0915-486b-a311-e7f3f8dfc6bb}">
    <Declaration><![CDATA[TYPE ST_ADS_CLEAN_AXIS :
(*************************************************************************************************)
(*  FILENAME:    ST_ADS_CLEAN_AXIS.EXP                                                           *)
(*  PROJECT:     CALMAR PUPLC                                                                    *)
(*  COPYRIGHT:   All rights reserved (c) Wifag//Polytype, Fribourg/Switzerland (2016)            *)
(*  ENVIRONMENT: TwinCAT PLC                                                                     *)
(*  VERSION:     <version>                                                                       *)
(*************************************************************************************************)
(*  DESCRIPTION:                                                                   <description> *)
(*     User commands from ADS and info feedback to ADS  for cleaning station axis.               *)
(*                                                                                </description> *)
(*************************************************************************************************)

STRUCT
  iO_Version            : INT :=  010001;   (*1.0.1*)
  aO_Type               : STRING := 'Axis';
  aO_Name               : STRING := '';
  sO_Message            : ST_ADS_MSG_IF;

  bI_FaultAck           : BOOL := FALSE;

  (*Manual Move, only possible when in maintenance and manual mode*)
  bI_ManualMove         : BOOL := FALSE;  (*Active as long as true*)
  bO_ManualMoveCanEx    : BOOL := FALSE;
  bO_ManualMovekExec    : BOOL := FALSE;
  fI_ManualTargetPos    : REAL := 0.0;

  (*Current axis position*)
  sO_AxisPosition       : ST_VAR_OUT_REAL;

  wO_ErrorCode          : WORD;
  bO_Busy               : BOOL;
  bO_Ready              : BOOL;
  bO_Error              : BOOL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>