<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_ADS_SECURITY" Id="{3089781e-79b3-4792-87fc-51e4e7085d14}">
    <Declaration><![CDATA[TYPE ST_ADS_SECURITY :
(*************************************************************************************************)
(*  FILENAME:    ST_ADS_SECURITY.EXP                                                             *)
(*  PROJECT:     CALMAR PUPLC                                                                    *)
(*  COPYRIGHT:   All rights reserved (c) Wifag//Polytype, Fribourg/Switzerland (2016)            *)
(*  ENVIRONMENT: TwinCAT PLC                                                                     *)
(*  VERSION:     <version>                                                                       *)
(*************************************************************************************************)
(*  DESCRIPTION:                                                                   <description> *)
(*     ADS structure for security.                                                               *)
(*                                                                                </description> *)
(*************************************************************************************************)

STRUCT
  iO_Version                  : INT    := 010000;             (*1.0.0*)
  aO_Type                     : STRING := 'Security';
  aO_Name                     : STRING := 'SECURITY';
  sO_Message                  : ST_ADS_MSG_IF;                (*Messaging*)

  (*I*)
  bI_Enable                   : BOOL := TRUE;                 (*Enable this device*)

  (*O*)
  bO_ErrorEmergencyStopButton : BOOL;                         (*Emergency stop*)
  bO_ErrorDoorMonitoring      : BOOL;                         (*Doors*)
  bO_ErrorCheckSumFuses       : BOOL;                         (*Fuses*)
  bO_ErrorExternalSecurity    : BOOL;                         (*Security from external*)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>