<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_SPEEDS" Id="{1c9a88b9-c4b2-452b-aaa5-9202c84f0e40}">
    <Declaration><![CDATA[TYPE ST_SPEEDS :
(*************************************************************************************************)
(*  FILENAME:    ST_SPEEDS.EXP                                                                   *)
(*  PROJECT:     CALMAR PUPLC                                                                    *)
(*  COPYRIGHT:   All rights reserved (c) Wifag//Polytype, Fribourg/Switzerland (2016)            *)
(*  ENVIRONMENT: TwinCAT PLC                                                                     *)
(*  VERSION:     <version>                                                                       *)
(*************************************************************************************************)
(*  DESCRIPTION:                                                                   <description> *)
(*     Structure to regroup the speeds parameters of the axis.                                   *)
(*                                                                                </description> *)
(*************************************************************************************************)

STRUCT
  fP_PlaceSpeed    : REAL;  (*  speed for placement mouvement    *)
  fP_WorkSpeed     : REAL;  (*  speed for work mouvement    *)
  fP_ServiceSpeed  : REAL;  (*  speed for maintenance operations    *)
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>